feat: 引入lazyload，增加scroll，listview，singer组件

--- a/src/common/stylus/variable.styl
+++ b/src/common/stylus/variable.styl
@@ -12,6 +12,9 @@ $color-text = #2E3030
 $color-text-d = rgba(255, 255, 255, 0.3)
 $color-text-l = rgb(241, 241, 241)
 $color-text-ll = rgba(255, 255, 255, 0.8)
+$color-text-g = #757575; 
+$color-text-ggg = #c7c7c7; 
+$color-text-gg = rgb(219, 219, 219); 
 
 //字体定义规范
 $font-size-small-s = 10px
