feat: App结构重构，支持多级滑动MultiLevelSwipe

--- a/src/common/stylus/variable.styl
+++ b/src/common/stylus/variable.styl
@@ -9,6 +9,8 @@ $color-theme-g = rgb(219, 219, 219)
 $color-theme-d = rgba(19, 19, 19, 0.6)
 $color-sub-theme = rgb(240, 116, 107)
 $color-text = #2E3030
+$color-text-i = rgba(255,255,255,0.6)
+$color-text-a = rgb(255,255,255)
 $color-text-d = rgba(255, 255, 255, 0.3)
 $color-text-l = rgb(241, 241, 241)
 $color-text-ll = rgba(255, 255, 255, 0.8)
