feat: 大更新，新增非常多的新功能

--- a/src/common/stylus/variable.styl
+++ b/src/common/stylus/variable.styl
@@ -8,6 +8,7 @@ $color-theme-l = rgb(241, 241, 241)
 $color-theme-g = rgb(219, 219, 219)
 $color-theme-d = rgba(19, 19, 19, 0.6)
 $color-sub-theme = rgb(240, 116, 107)
+$color-light = rgb(228, 228, 228)
 $color-text = #2E3030
 $color-text-i = rgba(255,255,255,0.6)
 $color-text-a = rgb(255,255,255)
@@ -16,8 +17,9 @@ $color-text-l = rgb(241, 241, 241)
 $color-text-ll = rgba(255, 255, 255, 0.8)
 $color-text-g = #757575; 
 $color-text-ggg = #c7c7c7; 
-$color-text-gg = rgb(219, 219, 219); 
-
+$color-text-gg = rgb(219, 219, 219)
+$color-text-ii = rgb(144,144,144)
+$color-text-light = rgba(144,144,144,0.6)
 //字体定义规范
 $font-size-small-s = 10px
 $font-size-small = 12px
@@ -25,3 +27,4 @@ $font-size-medium = 14px
 $font-size-medium-x = 16px
 $font-size-large = 18px
 $font-size-large-x = 22px
+$font-size-large-e = 40px
