feat: update many features

--- a/src/common/stylus/variable.styl
+++ b/src/common/stylus/variable.styl
@@ -20,6 +20,8 @@ $color-text-ggg = #c7c7c7;
 $color-text-gg = rgb(219, 219, 219)
 $color-text-ii = rgb(144,144,144)
 $color-text-light = rgba(144,144,144,0.6)
+$color-text-h = rgb(0,0,255)
+$color-d-theme = rgba(212, 68, 57, 0.5)
 //字体定义规范
 $font-size-small-s = 10px
 $font-size-small = 12px
