fix: 更换播放模式图标

--- a/src/common/stylus/variable.styl
+++ b/src/common/stylus/variable.styl
@@ -23,6 +23,7 @@ $color-text-light = rgba(144,144,144,0.6)
 $color-text-lighter = rgba(144,144,144,0.2)
 $color-text-h = rgba(0,0,255, 0.7)
 $color-d-theme = rgba(212, 68, 57, 0.5)
+$color-text-dark = rgba(0,0,0,0.9)
 //字体定义规范
 $font-size-small-s = 10px
 $font-size-small = 12px
