--- a/src/common/stylus/variable.styl
+++ b/src/common/stylus/variable.styl
@@ -14,6 +14,8 @@ $color-text-i = rgba(255,255,255,0.6)
 $color-text-a = rgb(255,255,255)
 $color-text-d = rgba(255, 255, 255, 0.3)
 $color-text-l = rgb(241, 241, 241)
+// half transparent 半透明白色字体
+$color-text-ht = rgba(255, 255, 255, 0.5)
 $color-text-ll = rgba(255, 255, 255, 0.8)
 $color-text-g = #757575; 
 $color-text-ggg = #c7c7c7; 
@@ -22,6 +24,7 @@ $color-text-ii = rgb(144,144,144)
 $color-text-light = rgba(144,144,144,0.6)
 $color-text-lighter = rgba(144,144,144,0.2)
 $color-text-h = rgba(0,0,255, 0.7)
+$color-text-blue = #99ccff
 $color-d-theme = rgba(212, 68, 57, 0.5)
 $color-text-dark = rgba(0,0,0,0.9)
 //字体定义规范
